--- a/spring_mvc_adv/pom.xml
+++ b/spring_mvc_adv/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>anton.sample</groupId>
-  <artifactId>spring_mvc_adv</artifactId>
+  <artifactId>spring_mvc_advs</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
